; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_base.c_ppb_set_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_base.c_ppb_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppb_data = type { i32 }

@PPB_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ppb_set_mode(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.ppb_data*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.ppb_data* @DEVTOSOFTC(i32 %8)
  store %struct.ppb_data* %9, %struct.ppb_data** %6, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @ppb_get_mode(i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @ppb_assert_locked(i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @device_get_parent(i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i64 @PPBUS_SETMODE(i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %27

20:                                               ; preds = %2
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @PPB_MASK, align 4
  %23 = and i32 %21, %22
  %24 = load %struct.ppb_data*, %struct.ppb_data** %6, align 8
  %25 = getelementptr inbounds %struct.ppb_data, %struct.ppb_data* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %7, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %20, %19
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local %struct.ppb_data* @DEVTOSOFTC(i32) #1

declare dso_local i32 @ppb_get_mode(i32) #1

declare dso_local i32 @ppb_assert_locked(i32) #1

declare dso_local i64 @PPBUS_SETMODE(i32, i32) #1

declare dso_local i32 @device_get_parent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
